--- a/Project/index.html
+++ b/Project/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
   </head>
   <body>
-
-<!-- Header start -->
+    <!-- Header start -->
 
     <header class="header">
       <div class="wrapper">
@@ -21,38 +21,40 @@
                 class="header__logo_pic"
               />
             </a>
-          </div> 
+          </div>
 
-<nav class="header__nav">
-    <ul class="header__list">
-        <il class="header__item">
-            <a href="#About_us" class="" id="js">О нас</a>
-        </il>
-        <il class="header__item">
-            <a href="#Projects">Проекты</a>
-        </il>
-        <il class="header__item">
-            <a href="#Stages">Этапы</a>
-        </il>
-        <il class="header__item">
-            <a href="#reviews">Отзывы</a>
-        </il>
-        <il class="header__items">
-            <a href="#Contacts">Контакты</a>
-        </il>
-        <il class="header__item">
-            <a href="#Searh">
-                <img src="../img/search.png" alt="searh" class="search__bottom">
-            </a>
-        </il>
-    </ul>
-</nav>
-
+          <nav class="header__nav">
+            <ul class="header__list">
+              <il class="header__item">
+                <a href="#About_us" class="" id="js">О нас</a>
+              </il>
+              <il class="header__item">
+                <a href="#Projects">Проекты</a>
+              </il>
+              <il class="header__item">
+                <a href="#Stages">Этапы</a>
+              </il>
+              <il class="header__item">
+                <a href="#reviews">Отзывы</a>
+              </il>
+              <il class="header__items">
+                <a href="#Contacts">Контакты</a>
+              </il>
+              <il class="header__item">
+                <a href="#Searh">
+                  <img
+                    src="../img/search.png"
+                    alt="searh"
+                    class="search__bottom"
+                  />
+                </a>
+              </il>
+            </ul>
+          </nav>
         </div>
       </div>
     </header>
 
-<!-- Header end -->
-
+    <!-- Header end -->
   </body>
 </html>
