Some changes in header

--- a/Project/index.html
+++ b/Project/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="wrapper">
         <div class="header__wrapper">
-          <div class="logo">
+          <div class="header__logo">
             <a href="#!" class="header__logo_link">
               <img
                 src="../img/Logo.png"
@@ -26,26 +26,26 @@
           <nav class="header__nav">
             <ul class="header__list">
               <il class="header__item">
-                <a href="#About_us" class="" id="js">О нас</a>
+                <a href="#About_us" class="header__link" id="js">О нас</a>
               </il>
               <il class="header__item">
-                <a href="#Projects">Проекты</a>
+                <a href="#Projects" class="header__link">Проекты</a>
               </il>
               <il class="header__item">
-                <a href="#Stages">Этапы</a>
+                <a href="#Stages" class="header__link">Этапы</a>
               </il>
               <il class="header__item">
-                <a href="#reviews">Отзывы</a>
+                <a href="#reviews" class="header__link">Отзывы</a>
               </il>
-              <il class="header__items">
-                <a href="#Contacts">Контакты</a>
+              <il class="header__item">
+                <a href="#Contacts" class="header__link">Контакты</a>
               </il>
               <il class="header__item">
                 <a href="#Searh">
                   <img
                     src="../img/search.png"
                     alt="searh"
-                    class="search__bottom"
+                    class="search__buttom"
                   />
                 </a>
               </il>
