Added Top block HTML + CSS

--- a/Project/index.html
+++ b/Project/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Evklid</title>
   </head>
   <body>
     <!-- Header start -->
@@ -56,5 +56,26 @@
     </header>
 
     <!-- Header end -->
+
+    <main class="main">
+      <!-- Top start -->
+
+      <section class="top__form">
+        <div class="wrapper">
+          <div class="top__title">
+            <h1 class="top__title-text">Проектные решения любой сложности</h1>
+            <div class="top__subtitle">
+              <p class="top__subtitle-text">
+                Есть над чем задуматься: базовые сценарии поведения
+                пользователей и по сей день остаются уделом проектантов
+              </p>
+            </div>
+            <button class="top__order-button">Заказать расчет</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Top end -->
+    </main>
   </body>
 </html>
