--- a/Project/index.html
+++ b/Project/index.html
@@ -76,6 +76,44 @@
       </section>
 
       <!-- Top end -->
+
+      <!-- About us start -->
+
+      <section class="information__block">
+        <div class="wrapper">
+          <div class="about__us-wrap">
+            <h2 class="about__us-title">О нас</h2>
+            <p class="about__us-subtitle">
+              Также как перспективное планирование создаёт необходимость
+              включения в производственный план целого ряда внеочередных
+              мероприятий с учётом комплекса экспериментов, поражающих по своей
+              масштабности и грандиозности. А также диаграммы связей могут быть
+              описаны максимально подробно. Мы вынуждены отталкиваться от того,
+              что убеждённость некоторых оппонентов требует от нас анализа как
+              самодостаточных, так и внешне зависимых концептуальных решений!
+              Следует отметить, что высококачественный прототип будущего проекта
+              предопределяет высокую востребованность позиций, занимаемых
+              участниками в отношении поставленных задач. Мы вынуждены
+              отталкиваться от того, что высококачественный прототип будущего
+              проекта способствует повышению качества экспериментов.
+            </p>
+            <div class="more">
+              <div class="more__with_pic">
+                <div class="more__footer">
+                  <p class="more__subtitle">
+                    Принимая во внимание показатели успешности, перспективное
+                    планирование способствует подготовке и реализации новых
+                    принципов.
+                  </p>
+                  <button class="more__button">Подробнее</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- About us end -->
     </main>
   </body>
 </html>
