--- a/Project Evclid/index.html
+++ b/Project Evclid/index.html
@@ -65,30 +65,88 @@
       <!--Intro end-->
 
       <!--About us start-->
-      <div class="wrapper-full">
-        <div class="about__us">
-          <div class="wrapper-full">
-            <div class="about__us-header">
-              <h3 class="about__us-title">О нас</h3>
-              <p class="about__us-subtitle">
-                Также как перспективное планирование создаёт необходимость
-                включения в производственный план целого ряда внеочередных
-                мероприятий с учётом комплекса экспериментов, поражающих по
-                своей масштабности и грандиозности. А также диаграммы связей
-                могут быть описаны максимально подробно. Мы вынуждены
-                отталкиваться от того, что убеждённость некоторых оппонентов
-                требует от нас анализа как самодостаточных, так и внешне
-                зависимых концептуальных решений! Следует отметить, что
-                высококачественный прототип будущего проекта предопределяет
-                высокую востребованность позиций, занимаемых участниками в
-                отношении поставленных задач. Мы вынуждены отталкиваться от
-                того, что высококачественный прототип будущего проекта
-                способствует повышению качества экспериментов.
-              </p>
+      <section class="about__us">
+        <div class="wrapper-full">
+          <div class="about__us-header">
+            <h3 class="about__us-title">О нас</h3>
+            <p class="about__us-subtitle">
+              Также как перспективное планирование создаёт необходимость
+              включения в производственный план целого ряда внеочередных
+              мероприятий с учётом комплекса экспериментов, поражающих по своей
+              масштабности и грандиозности. А также диаграммы связей могут быть
+              описаны максимально подробно. Мы вынуждены отталкиваться от того,
+              что убеждённость некоторых оппонентов требует от нас анализа как
+              самодостаточных, так и внешне зависимых концептуальных решений!
+              Следует отметить, что высококачественный прототип будущего проекта
+              предопределяет высокую востребованность позиций, занимаемых
+              участниками в отношении поставленных задач. Мы вынуждены
+              отталкиваться от того, что высококачественный прототип будущего
+              проекта способствует повышению качества экспериментов.
+            </p>
+          </div>
+
+          <div class="about__us-cards">
+            <div class="about__us-card">
+              <div class="about__us-card-pic">
+                <img
+                  src="./img/more__pic.jpg"
+                  alt="О нас"
+                  class="about__us-card-thumb"
+                />
+                <div class="about__us-card-footer">
+                  <div class="about__us-card-subtitle">
+                    <span class="about__us-card-subtitle-text">
+                      Принимая во внимание показатели успешности, перспективное
+                      планирование способствует подготовке и реализации новых
+                      принципов.
+                    </span>
+                  </div>
+                  <div class="about__us-card-button">
+                    <button class="about__us-button">Подробнее</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="about__us-cards-rt">
+              <div class="about__us-card-rt">
+                <div class="about__us-card-rt-pic">
+                  <img
+                    src="./svg/pic_card_1.svg"
+                    alt="Box"
+                    class="about__us-rt-pic"
+                  />
+                </div>
+                <div class="about__us-card-rt-text">
+                  <h3 class="about__us-card-rt-title">
+                    Консультация с широким активом
+                  </h3>
+                  <p class="about__us-card-rt-subtitle">
+                    А также свежий взгляд на привычные вещи - безусловно
+                    открывает новые горизонты для как самодостаточных, так и
+                    внешне зависимых концептуальных решений.
+                  </p>
+                </div>
+              </div>
+              <div class="about__us-card-rt">
+                <img
+                  src="./svg/pic_card_2.svg"
+                  alt="Box"
+                  class="about__us-rt-pic"
+                />
+                <h3 class="about__us-card-rt-title">
+                  В своем стремлении повысить
+                </h3>
+                <p class="about__us-card-rt-subtitle">
+                  Качество жизни, они забывают, что сплочённость команды
+                  профессионалов представляет собой интересный эксперимент
+                  проверки прогресса профессионального сообщества.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!--About us end-->
     </main>
   </body>
