Ended about us block. Added first work card

--- a/Project Evclid/index.html
+++ b/Project Evclid/index.html
@@ -112,7 +112,7 @@
               <div class="about__us-card-rt">
                 <div class="about__us-card-rt-pic">
                   <img
-                    src="./svg/pic_card_1.svg"
+                    src="./img/Frame 16.png"
                     alt="Box"
                     class="about__us-rt-pic"
                   />
@@ -128,26 +128,85 @@
                   </p>
                 </div>
               </div>
+
               <div class="about__us-card-rt">
-                <img
-                  src="./svg/pic_card_2.svg"
-                  alt="Box"
-                  class="about__us-rt-pic"
-                />
-                <h3 class="about__us-card-rt-title">
-                  В своем стремлении повысить
-                </h3>
-                <p class="about__us-card-rt-subtitle">
-                  Качество жизни, они забывают, что сплочённость команды
-                  профессионалов представляет собой интересный эксперимент
-                  проверки прогресса профессионального сообщества.
-                </p>
+                <div class="about__us-card-rt-pic">
+                  <img
+                    src="./img/Frame 12.png"
+                    alt="Box"
+                    class="about__us-rt-pic"
+                  />
+                </div>
+                <div class="about__us-card-rt-text">
+                  <h3 class="about__us-card-rt-title">
+                    В своем стремлении повысить
+                  </h3>
+                  <p class="about__us-card-rt-subtitle">
+                    Качество жизни, они забывают, что сплочённость команды
+                    профессионалов представляет собой интересный эксперимент
+                    проверки прогресса профессионального сообщества.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
       <!--About us end-->
+      <!--Work start-->
+      <div class="work">
+        <div class="wrapper-full">
+          <div class="work__header">
+            <h3 class="work__title">Как мы работаем</h3>
+            <nav class="work__steps">
+              <ul class="work__steps-list">
+                <li class="work__step">
+                  <a href="#!" class="work__step-link">1 шаг</a>
+                </li>
+                <li class="work__step">
+                  <a href="#!" class="work__step-link">2 шаг</a>
+                </li>
+                <li class="work__step">
+                  <a href="#!" class="work__step-link">3 шаг</a>
+                </li>
+                <li class="work__step">
+                  <a href="#!" class="work__step-link">4 шаг</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="work__cards">
+            <div class="work__card-1">
+              <div class="work__card-info">
+                <h4 class="work__card-title">Проводим консультацию</h4>
+                <p class="work__card-subtitle">
+                  Влечет за собой процесс внедрения и модернизации приоритизации
+                  разума над эмоциями. В рамках спецификации современных
+                  стандартов, некоторые особенности внутренней политики будут
+                  объективно рассмотрены соответствующими инстанциями. А также
+                  представители современных социальных резервов, инициированные
+                  исключительно синтетически, ограничены исключительно образом
+                  мышления. Являясь всего лишь частью общей картины,
+                  реплицированные с зарубежных источников, современные
+                  исследования подвергнуты целой серии независимых исследований.
+                  Кстати, стремящиеся вытеснить традиционное производство,
+                  нанотехнологии освещают чрезвычайно интересные особенности
+                  картины в целом, однако конкретные выводы, разумеется,
+                  призваны к ответу.
+                </p>
+                <div class="work__card-buttons">
+                  <button class="button__more">Подробнее</button>
+                  <button class="button__deal">Договор</button>
+                </div>
+              </div>
+              <div class="work__card-pic">
+                <img src="./img/card_1.jpg" alt="" class="word__card-thumb" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Work end-->
     </main>
   </body>
 </html>
