--- a/Project Evclid/index.html
+++ b/Project Evclid/index.html
@@ -176,7 +176,7 @@
             </nav>
           </div>
           <div class="work__cards">
-            <div class="work__card-1">
+            <div class="work__card-1 work__card">
               <div class="work__card-info">
                 <h4 class="work__card-title">Проводим консультацию</h4>
                 <p class="work__card-subtitle">
@@ -200,13 +200,262 @@
                 </div>
               </div>
               <div class="work__card-pic">
-                <img src="./img/card_1.jpg" alt="" class="word__card-thumb" />
+                <img
+                  src="./img/card_1.jpg"
+                  alt="Проводим консультацию"
+                  class="word__card-thumb"
+                />
               </div>
             </div>
+
+            <!--Hidden cards start-->
+            <!--
+              <div class="work__card-2">
+              <div class="work__card-info">
+                <h4 class="work__card-title">Составляем смету</h4>
+                <p class="work__card-subtitle">
+                  Внедрения и модернизации приоритизации разума над эмоциями. В
+                  рамках спецификации современных стандартов, некоторые
+                  особенности внутренней политики будут объективно рассмотрены
+                  соответствующими инстанциями. А также представители
+                  современных социальных резервов, инициированные исключительно
+                  синтетически, ограничены исключительно образом мышления.
+                  Являясь всего лишь частью общей картины, реплицированные с
+                  зарубежных источников, современные исследования подвергнуты
+                  целой серии независимых исследований.
+                </p>
+                <div class="work__card-buttons">
+                  <button class="button__more">Подробнее</button>
+                  <button class="button__deal">Договор</button>
+                </div>
+              </div>
+              <div class="work__card-pic">
+                <img
+                  src="./img/card_2.jpg"
+                  alt="Составляем смету"
+                  class="word__card-thumb"
+                />
+              </div>
+            </div>
+
+            <div class="work__card-3">
+              <div class="work__card-info">
+                <h4 class="work__card-title">Привлекаем подрядчиков</h4>
+                <p class="work__card-subtitle">
+                  Идейные соображения высшего порядка, а также новая модель
+                  организационной деятельности требует анализа прогресса
+                  профессионального сообщества. Высокий уровень вовлечения
+                  представителей целевой аудитории является четким
+                  доказательством простого факта: высококачественный прототип
+                  будущего проекта напрямую зависит от дальнейших направлений
+                  развития. Разнообразный и богатый опыт говорит нам, что новая
+                  модель организационной деятельности говорит о возможностях
+                  системы массового участия. Принимая во внимание показатели
+                  успешности, постоянное информационно-пропагандистское
+                  обеспечение нашей деятельности позволяет выполнить важные
+                  задания по разработке прогресса профессионального сообщества.
+                </p>
+                <div class="work__card-buttons">
+                  <button class="button__more">Подробнее</button>
+                  <button class="button__deal">Договор</button>
+                </div>
+              </div>
+              <div class="work__card-pic">
+                <img src="./img/card_3.jpg" alt="Привлекаем подрядчиков" class="word__card-thumb" />
+              </div>
+            </div>
+
+            <div class="work__card-4">
+              <div class="work__card-info">
+                <h4 class="work__card-title">Иеспектируем все этапы работ</h4>
+                <p class="work__card-subtitle">
+                  Высокий уровень вовлечения представителей целевой аудитории
+                  является четким доказательством простого факта:
+                  высококачественный прототип будущего проекта напрямую зависит
+                  от дальнейших направлений развития. Разнообразный и богатый
+                  опыт говорит нам, что новая модель организационной
+                  деятельности говорит о возможностях системы массового участия.
+                  Принимая во внимание показатели успешности, постоянное
+                  информационно-пропагандистское обеспечение нашей деятельности
+                  позволяет.
+                </p>
+                <div class="work__card-buttons">
+                  <button class="button__more">Подробнее</button>
+                  <button class="button__deal">Договор</button>
+                </div>
+              </div>
+              <div class="work__card-pic">
+                <img src="./img/card_4.jpg" alt="Иеспектируем все этапы работ" class="word__card-thumb" />
+              </div>
+            </div>
+            -->
+            <!--Hidden cards end-->
           </div>
         </div>
       </div>
       <!--Work end-->
+
+      <!--Questions start-->
+      <section class="questions">
+        <div class="wrapper-full">
+          <div class="questions__header">
+            <h3 class="questions__title">Часто задаваемые вопросы</h3>
+          </div>
+          <ul class="questions__list">
+            <li class="questions__item">
+              <a href="#!" class="question__link"
+                >Из чего формируется конечная стоимость проекта?</a
+              >
+              <a href="#!" class="button__plus"
+                ><img src="./img/+х.jpg" alt="Plus"
+              /></a>
+            </li>
+            <li class="questions__item">
+              <a href="#!" class="question__link"
+                >У меня есть свой проект. Сможем ли мы его
+                доработать/реализовать?</a
+              >
+              <a href="#!" class="button__plus"
+                ><img src="./img/+х.jpg" alt="Plus"
+              /></a>
+            </li>
+            <li class="questions__item">
+              <a href="#!" class="question__link"
+                >Я выбираю между разными компаниями. В чем ваше отличие?</a
+              >
+              <a href="#!" class="button__plus"
+                ><img src="./img/+х.jpg" alt="Plus"
+              /></a>
+            </li>
+            <li class="questions__item">
+              <a href="#!" class="question__link"
+                >Могу ли я делегировать вам работу/согласование с
+                подрядчиком/организацией?</a
+              >
+              <a href="#!" class="button__plus"
+                ><img src="./img/+х.jpg" alt="Plus"
+              /></a>
+            </li>
+            <li class="questions__item">
+              <a href="#!" class="question__link"
+                >Могу ли я вернуть деньги на каком-либо из этапов работ?</a
+              >
+              <a href="#!" class="button__plus"
+                ><img src="./img/+х.jpg" alt="Plus"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Questions end -->
     </main>
+
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer__wrapper">
+          <div class="navigation">
+            <div class="footer__logo">
+              <img
+                src="./img/footer_logo.png"
+                alt="Логотип компании"
+                class="footer__logo-pic"
+              />
+            </div>
+
+            <nav class="footer__navigation">
+              <ul class="footer__navigation-list">
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link">О нас</a>
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link">Проекты</a>
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link">Отзывы</a>
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link"
+                    >Договор оферты</a
+                  >
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link"
+                    >Договор подряда</a
+                  >
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link"
+                    >Конфиденциальность</a
+                  >
+                </li>
+                <li class="footer__navigation-item">
+                  <a href="#!" class="footer__navigation-link"
+                    >Партнерское соглашение</a
+                  >
+                </li>
+              </ul>
+            </nav>
+
+            <div class="social__links">
+              <a href="#!" class="social__link"
+                ><img src="./img/fb.png" alt="FB" class="fb"
+              /></a>
+              <a href="#!" class="social__link"
+                ><img src="./img/vk.png" alt="vk" class="vk"
+              /></a>
+              <a href="#!" class="social__link"
+                ><img src="./img/instagram.png" alt="ig" class="ig"
+              /></a>
+            </div>
+          </div>
+
+          <div class="forms">
+            <h3 class="forms__title">Оставить заявку</h3>
+            <form action="" class="form">
+              <fieldset class="name__form-wrap">
+                <p class="form_input form__field">
+                  <input
+                    type="text"
+                    name="Фамилия, имя и отчество*"
+                    class="fio__form"
+                    placeholder="Фамилия, имя и отчество*"
+                  />
+                  <input
+                    type="text"
+                    name="E-mail"
+                    class="email__form form__field"
+                    placeholder="E-mail*"
+                  />
+                  <input
+                    type="text"
+                    name="Message"
+                    class="message__form form__field"
+                    placeholder="Сообщение"
+                  />
+                </p>
+              </fieldset>
+            </form>
+            <div class="forms__button">
+              <button class="send__data-button">Отправить данные</button>
+              <form class="check__box">
+                <input type="checkbox" name="data" id="" />
+                <label for="html">Согласен на обработку данных</label>
+              </form>
+            </div>
+          </div>
+
+          <div class="footer__info">
+            <p class="footer__info-subtitle">
+              Высокий уровень вовлечения представителей целевой аудитории
+              является четким доказательством простого факта: разбавленное
+              изрядной долей эмпатии, рациональное мышление позволяет оценить
+              значение модели развития. Таким образом, консультация с широким
+              активом обеспечивает широкому кругу (специалистов) участие в
+              формировании стандартных подходов.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
